Bug 423223 - Switching Compositor "Rendering backend" and applying doesn't let you revert
Summary: Switching Compositor "Rendering backend" and applying doesn't let you revert
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.19.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-06-19 12:37 UTC by nyanpasu64
Modified: 2020-06-22 13:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nyanpasu64 2020-06-19 12:37:56 UTC
SUMMARY
If you switch compositor settings "rendering backend" and apply, KDE only lets you apply again if you change from the *original* option.

STEPS TO REPRODUCE
1. Open KDE compositor settings.
2. Switch rendering backend and apply.

OBSERVED RESULT

If you switch back to the original rendering backend, you can't apply. If you switch to the new rendering backend, you can apply again.

EXPECTED RESULT

If you switch back to the original rendering backend, you can apply to revert. But you can't apply the new rendering backend a second time redundantly.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20200617
KDE Plasma Version: 5.19.0
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0
Kernel Version: 5.7.1-1-default
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 520 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2020-06-22 07:25:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/73
Comment 2 Benjamin Port 2020-06-22 13:48:01 UTC
Git commit a8979aa4e46cc60c63542c12a73e8c6f1fa74041 by Benjamin Port.
Committed on 22/06/2020 at 07:24.
Pushed by ngraham into branch 'Plasma/5.19'.

KCM Compositing: Fix save state

use settings objects to track state instead of a class member that will need to be synchronized.

M  +6    -12   kcmkwin/kwincompositing/main.cpp

https://invent.kde.org/plasma/kwin/commit/a8979aa4e46cc60c63542c12a73e8c6f1fa74041