KCM Compositing: Fix save state

use settings objects to track state instead of a class member that will need to be synchronized.

BUG: 423223